[package]
name = "esp-camera-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-idf-hal = "0.46"
esp-idf-sys = "0.37"

[features]
default = []

[package.metadata.esp-idf-sys]
esp_idf_components = ["esp32-camera"]

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp32-camera", version = "2.1.6" }
bindings_header = "bindings.h"
bindings_module = "camera"
